assets/css/src/content.css
/* ... */
.single-format-link .buddyx-post-section:not(.has-featured-image) .entry-media-image {
    margin-left: 0;
    width: auto;
    transform: none;
    margin-bottom: var(--el-spacing);
}

.single-format-link .buddyx-post-section.has-featured-image .entry-media-image .buddyx-link-format {
    margin-top: var(--el-spacing);
    padding-left: var(--el-spacing);
    padding-right: var(--el-spacing);
    display: block;
    text-align: center;
}

.post-meta-tags .post-meta-tag__item {
    display: inline-block;
}

.post-meta-tags .post-meta-tag__item>a {
    color: var(--color-theme-primary);
}

.post-meta-tags.badge {
    display: flex;
    flex-flow: wrap;
    gap: 10px;
}

.post-meta-tags.badge .post-meta-tag__item>a {
    background-color: var(--color-theme-primary);
    color: #fff;
    display: inline-block;
    padding: 4px 8px;
    font-size: 13px;
    line-height: 1.2;
    font-weight: 400;
    border-radius: 3px;
}

.post-meta-tags.underline .post-meta-tag__item>a {
    text-decoration: underline;
}

@media (min-width: 576px) {
    .buddyx-content--small {
        max-width: var(--container-sm);
    }
}

@media (min-width: 768px) {
    .buddyx-content--small {
        max-width: var(--container-md);
    }

    .single-post .site-wrapper,
    .buddyx-post-section:not(.has-featured-image) {
        margin-top: calc(var(--el-spacing) * 2);
    }
}

/* @media (min-width: 992px) {

    .single-post .site-wrapper,
    .buddyx-post-section:not(.has-featured-image) {
        margin-top: calc(var(--el-spacing) * 2);
    }
} */

@media (max-width: 767px) {
    .buddyx-post-section.buddyx-section-title-over .post-thumbnail {
        position: relative;
        z-index: 0;
        width: 100%;
        height: 100%;
        min-height: 500px;
        margin: 0 auto;
        display: block;
        overflow: hidden;
        padding-top: 100%;
    }

    .buddyx-post-section.buddyx-section-title-over .post-thumbnail>img {
        object-fit: cover;
        object-position: 50% 50%;
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
    }

    .buddyx-post-section .post-thumbnail {
        position: relative;
        z-index: 0;
        width: 100%;
        height: 100%;
        margin: 0 auto;
        display: block;
        overflow: hidden;
        padding-top: 52.56%;
    }

    .buddyx-post-section .post-thumbnail>img {
        object-fit: cover;
        object-position: 50% 50%;
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
    }
}

/*--------------------------------------------------------------
## Title Over
--------------------------------------------------------------*/

.buddyx-section-title-over.has-featured-image .entry-header--default {
    width: 100%;
    position: absolute;
    bottom: calc(var(--el-spacing) * 2);
    z-index: 1;
}

.single-format-link .buddyx-section-title-over.has-featured-image .entry-header--default {
    bottom: calc(var(--el-spacing) * 5);
}

.buddyx-section-title-over.has-featured-image .post-thumbnail {
    position: relative;
}

.buddyx-section-title-over.has-featured-image .post-thumbnail::after {
    content: "";
    display: block;
    background: rgb(0, 0, 0, 0.1);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.buddyx-section-title-over:not(.quote):not(.video):not(.audio):not(.gallery).has-featured-image .post-meta-category a,
.buddyx-section-title-over:not(.quote):not(.video):not(.audio):not(.gallery).has-featured-image h1.entry-title,
.buddyx-section-title-over:not(.quote):not(.video):not(.audio):not(.gallery).has-featured-image .entry-meta,
.buddyx-section-title-over:not(.quote):not(.video):not(.audio):not(.gallery).has-featured-image .entry-meta__content a,
.buddyx-section-title-over:not(.quote):not(.video):not(.audio):not(.gallery).has-featured-image .post-edit-link {
    color: #fff;
}

.buddyx-section-title-over.has-featured-image .entry-header--default {
    padding-left: var(--el-spacing);
    padding-right: var(--el-spacing);
}

.buddyx-section-title-over.has-featured-image .buddyx-link-block .buddyx-link-format {
    margin-bottom: var(--el-spacing);
}

.buddyx-section-title-over.has-featured-image .buddyx-link-block .buddyx-link-format {
    padding-left: var(--el-spacing);
    padding-right: var(--el-spacing);
}

.buddyx-section-title-over:not(.has-featured-image) .buddyx-quote-block,
.buddyx-section-title-over:not(.has-featured-image) .buddyx-video-block,
.buddyx-section-title-over:not(.has-featured-image) .buddyx-audio-block,
.buddyx-section-title-over:not(.has-featured-image) .buddyx-gallery-block {
    margin-bottom: var(--el-spacing);
}

.single-format-quote .buddyx-section-title-over.has-featured-image .entry-header--default,
.single-format-video .buddyx-section-title-over.has-featured-image .entry-header--default,
.single-format-audio .buddyx-section-title-over.has-featured-image .entry-header--default,
.single-format-gallery .buddyx-section-title-over.has-featured-image .entry-header--default {
    margin-top: var(--el-spacing);
}

@media (min-width: 768px) {

    .buddyx-section-title-over:not(.has-featured-image) .buddyx-quote-block,
    .buddyx-section-title-over:not(.has-featured-image) .buddyx-video-block,
    .buddyx-section-title-over:not(.has-featured-image) .buddyx-audio-block,
    .buddyx-section-title-over:not(.has-featured-image) .buddyx-gallery-block {
        margin-bottom: calc(var(--el-spacing) * 2);
    }

    .single-format-quote .buddyx-section-title-over.has-featured-image .entry-header--default,
    .single-format-video .buddyx-section-title-over.has-featured-image .entry-header--default,
    .single-format-audio .buddyx-section-title-over.has-featured-image .entry-header--default,
    .single-format-gallery .buddyx-section-title-over.has-featured-image .entry-header--default {
        margin-top: calc(var(--el-spacing) * 2);
    }
}
/* ... */

